Rettelser til sharedlib

--- a/LaTeX/Projektdokumtation/MyBib.bib
+++ b/LaTeX/Projektdokumtation/MyBib.bib
@@ -11,6 +11,13 @@
   		note = {Tilgået: 08/12-2015}
 }
 
+@misc{XML,
+ 		 title = {XML},
+  		howpublished = {\url{https://msdn.microsoft.com/en-us/library/aa468558.aspx}},
+  		note = {Tilgået: 14/12-2015}
+}
+
+
 @misc{	TCPIP,
 		title = {TCP/IP Protocol Architecture},
   		howpublished = {\url{https://technet.microsoft.com/en-us/library/cc958821.aspx}},
