--- a/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Intro.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Intro.tex
@@ -1,3 +1,3 @@
 \subsection{Introduktion}
 
-\gls{SL} er et fælles bibliotek der kan tilgås fra alle systemerne i projektet. \gls{SL}'s funktionalitet består blandt andet i at implementere en protokol der gør det muligt for de forskellige systemer at kommunikere med hinanden, dette ved at få parset relevante kommando beskeder til og fra XML så disse via socket forbindelser kan sendes over \gls{CS}. Derudover findes der i biblioteket forskellige modeller for bla. produkter og produktkategorier som bruges til at standardisere måden data bliver håndteret på, på tværs af systemet.
+\gls{SL} er et fælles bibliotek der kan tilgås fra alle systemerne i projektet. \gls{SL}'s funktionalitet består blandt andet i at implementere en protokol der gør det muligt for de forskellige systemer at kommunikere med hinanden, ved at få parset relevante kommando beskeder til og fra XML så disse via socket forbindelser kan sendes til \gls{CS}. Derudover findes der i biblioteket forskellige modeller for bla. produkter og produktkategorier som bruges til at standardisere måden data bliver håndteret på, på tværs af systemet.
