--- a/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Klassebeskrivelser/CommandKlassebeskrivelser.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Klassebeskrivelser/CommandKlassebeskrivelser.tex
@@ -2,7 +2,7 @@
 Herunder forklares yderligere om de forskellige kommando klasser der findes i \gls{SL}. Der vil desuden være en uddybende forklaring om de forskellige klassers funktionalitet og ansvar.\\
 
 \textbf{Command}\\
-Denne klasse indeholder blot en attribut, nemlig CmdName. Alle andre kommandoer i \gls{SL} nedarver fra denne klasse hvilket betyder at det bliver muligt at kode op imod en Command klasse og ved at caste på CmdName, kan man generisk lave funktionalitet på modtagne kommando objekter, hvilket blandt andet bliver udnyttet i de forskellige marshallers decode funktion.
+Denne klasse indeholder blot en attribut, nemlig CmdName. Alle andre kommandoer i \gls{SL} nedarver fra denne klasse hvilket betyder at det bliver muligt at kode op imod en Command klasse og ved at caste på baggrund af CmdName, kan man generisk lave funktionalitet på modtagne kommando objekter, hvilket blandt andet bliver udnyttet i de forskellige marshallers Decode funktion.
 
 \begin{figure}[H]
     \centering
