--- a/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Klassebeskrivelser/MarshalKlassebeskrivelser.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Klassebeskrivelser/MarshalKlassebeskrivelser.tex
@@ -1,5 +1,5 @@
 \subsubsection{Klassebeskrivelser}
-Da UML'en i de forskellige marshallers praktisk talt ligner hinanden er diagrammerne i denne klassebeskrivelse slået sammen til oversigter over de tre typer af marshallers hvortil der vil være en kort beskrivelse af de enkelte klasser.\\
+Da UML repræsentationen af de forskellige marshallers praktisk talt ligner hinanden er diagrammerne i denne klassebeskrivelse slået sammen til oversigter over de tre typer af marshallers hvortil der vil være en kort beskrivelse af de enkelte klasser.\\
 
 \textbf{Generelle marshallers} håndterer de generelle kommandoer. på figur \ref{fig:overklasseMarsGen} ses en oversigt over de forskellige generelle marshal klasser der alle implementerer ICmdMarshal interfacet.
 
