--- a/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Models.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Models.tex
@@ -1,4 +1,4 @@
 \subsection{Models}
-Moddellerne i \gls{SL} har fungeret som domain klasser og har grundlæggende været brugt til at ensrette data på tværs af systemerne.
+Moddellerne i \gls{SL} har fungeret som domæneklasser og har grundlæggende været brugt til at ensrette data på tværs af delsystemerne.
 
 \input{Systemdesign/SharedLib/Klassebeskrivelser/ModelKlassebeskrivelser}
