--- a/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Commands.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Commands.tex
@@ -1,5 +1,5 @@
 \subsection{Commands}\label{COMMAND}
-Fælles for alle systemerne i dette projekt er at de kommunikere ved hjælp af kommandoer. 
+Fælles for alle systemerne i dette projekt er at de kommunikerer ved hjælp af kommandoer. 
 
 Der skelnes imellem tre typer af kommandoer:
 
