Added singleton as litterature

--- a/LaTeX/Projektdokumtation/MyBib.bib
+++ b/LaTeX/Projektdokumtation/MyBib.bib
@@ -75,6 +75,12 @@
   		note = {Tilgået: 10/12-2015}
 }
 
+@misc{	SINGLETON,
+		title = {Singleton Designpattern},
+  		howpublished = {\url{https://msdn.microsoft.com/en-us/library/ff650316.aspx}},
+  		note = {Tilgået: 14/12-2015}
+}
+
 
 
 
