Rettet systemdesign for Administrationssystemet

--- a/LaTeX/Projektdokumtation/Systemdesign/backend/klassebeskrivelser/BLL.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/backend/klassebeskrivelser/BLL.tex
@@ -38,7 +38,7 @@ Denne viewmodel hører til EditProductViewModel og indeholder kommandoer og data
 \bigskip
 
 \textbf{AddCategoryViewModel}\\
-Denne viewmodel hører til AddCategoryWindow og indeholder kommandoer og data der skal bruge for at oprette en ny produktkategori.
+Denne viewmodel hører til AddCategoryWindow og indeholder de kommandoer og data der skal bruges for at oprette en ny produktkategori.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.5\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/AddCategoryVM}
@@ -48,7 +48,7 @@ Denne viewmodel hører til AddCategoryWindow og indeholder kommandoer og data de
 \bigskip
 
 \textbf{EditCategoryViewModel}\\
-Denne viewmodel hører til EditCategoryWindow og indeholder kommandoer og data der skal bruge for at redigere en produktkategori.
+Denne viewmodel hører til EditCategoryWindow og indeholder de kommandoer og data der skal bruges for at redigere en produktkategori.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.5\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/EditCategoryVM}
@@ -58,7 +58,8 @@ Denne viewmodel hører til EditCategoryWindow og indeholder kommandoer og data d
 \bigskip
 
 \textbf{DeleteCategoryViewModel}\\
-Denne viewmodel hører til DeleteCategoryWindow og indeholder kommandoer og data der skal bruge for at slette en produktkategori.
+Denne viewmodel hører til DeleteCategoryWindow og indeholder de kommandoer og data der skal bruges for at slette en produktkategori.
+
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.5\textwidth]{Systemdesign/backend/klassebeskrivelser/Images/DeleteCategoryVM}
