--- a/LaTeX/Projektdokumtation/Systemdesign/backend/DAL.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/backend/DAL.tex
@@ -4,8 +4,8 @@
 \input{Systemdesign/backend/klassebeskrivelser/DAL}
 
 \subsubsection{Kommunikation med Central Server}
-Klienten i Administrationssystemet består af en socketconnection som er defineret i SharedLib[Ref]. Da denne skal bruges i både businesslogic, men også i MainWindowViewModel og der samtidig øn-skes at den samme benyttes hver gang, bruges Singleton[Reference] for denne forbindelse. \\
-Til at sende data benyttes en ModelHandler [Ref], som hver i sær har en metode til de forskellige handlinger. Eksempelvis EditProduct, DeleteProduct mf. Disse metoder arbejder alle sammen på samme måde:
+Klienten i Administrationssystemet består af en socketconnection som er defineret i SharedLib[Ref]. Da denne skal bruges i både business logic, men også i MainWindowViewModel og der samtidig ønskes at den samme benyttes hver gang, bruges Singleton~\cite{SINGLETON} for denne forbindelse. \\
+Til at sende data benyttes en ModelHandler, som hver i sær har en metode til de forskellige handlinger. Eksempelvis EditProduct, DeleteProduct mf. Disse metoder arbejder alle sammen på samme måde:
 \begin{enumerate}
 \item Opret en XML-kommandostring vha. protokollen\footnote{Nærmere beskrivet under SharedLib, afsnit \ref{SHAREDLIB}, side \pageref{SHAREDLIB}}
 \item Send data til klienten
