Reviewed files for KasseApparat design

--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/Intro.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/DAL/Intro.tex
@@ -1,6 +1,6 @@
 \subsubsection{Introduktion}
 
-Data Access Layer ansvar for \gls{KA} består i at håndtere kommunikationen til \gls{CS}, samt at formattere data til of fra overførsel. Desuden har Data Access Laget ansvar for at danne salgskvitteringer
+Data Access Layer ansvar for \gls{KA} består i at håndtere kommunikationen til \gls{CS}, samt at formatere data til og fra overførsel. Desuden har Data Access Laget ansvar for at danne salgskvitteringer
 
 \begin{figure}[H]
     \centering
