--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI.tex
@@ -2,7 +2,7 @@
 \subsection{Presentation Layer}
 
 \subsubsection{Introduktion}
-Præsentationslaget i kasseapparatet er bygget med XML i WPF. Selve laget blev først designet ved brug af skitsen på figur \ref{fig:KasseMockup} og derefter implementeret med visual studios WPF designer som set på figur \ref{fig:EndeligeGUI}. Præsentationslaget er opsat i henhold til MVVM som sikrer at vores Præsentations- og Business Logic Lag er ordentligt adskilt.Til sidst til afsnittet er medtaget klassebeskrivelser der kort fortæller om hver klasse og dennes ansvar. \\
+Præsentationslaget i kasseapparatet er bygget med XML i WPF. Selve laget blev først designet ved brug af skitsen på figur \ref{fig:KasseMockup} og derefter implementeret med Visual Studios WPF designer som set på figur \ref{fig:EndeligeGUI}. Præsentationslaget er opsat i henhold til MVVM som sikrer at vores Præsentations- og Business Logic Lag er ordentligt adskilt. Til sidst i afsnittet er medtaget klassebeskrivelser der kort fortæller om hver klasse og dennes ansvar. \\
 
 \subsubsection{Brugergrænsefladen}
 
@@ -13,7 +13,7 @@ Præsentationslaget i kasseapparatet er bygget med XML i WPF. Selve laget blev f
 	\label{fig:KasseMockup}
 \end{figure}
 
-Den ovenstående skitse, var den første skitse af kasseapparatets brugergrænseflade som blev opsat. Denne skitse er tegnet i paint. Idéen bag grænsefladen var, at man skulle tænke fra højre mod venstre. Først vælges et produkt. Dette tilføjes til listen i midten. Når alle produkter er tilføjet færdiggøres salget i højre side af grænsefladen.
+Den ovenstående skitse, var den første skitse af kasseapparatets brugergrænseflade som blev opsat. Denne skitse er tegnet i paint. Idéen bag grænsefladen var, at man skulle tænke fra venstre mod højre. Først vælges et produkt. Dette tilføjes til listen i midten. Når alle produkter er tilføjet færdiggøres salget i højre side af grænsefladen.
 
 \begin{figure}[H]
 	\centering
