--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/DesignOgStruktur/DesignAfSoftware.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/DesignOgStruktur/DesignAfSoftware.tex
@@ -1,5 +1,5 @@
 \subsubsection{Design af elementer}
-Herunder vil designet af en stor del af Kommunikationen i grænsefladen blive beskrevet, både med klassediagrammer og sekvensdiagrammer.\\
+Herunder vil designet af en stor del af kommunikationen i grænsefladen blive beskrevet, både med klassediagrammer og sekvensdiagrammer.\\
 
 \textbf{Klassediagrammer}\\
 
@@ -20,7 +20,7 @@ Klassediagrammet er delt op i 3 lag, der skal symbolisere henholdsvis Presentati
 	\label{fig:ButtonModel}
 \end{figure}
 
-På figur \ref{fig:ButtonModel} ser man ViewModel pakken buttonmodel, der står for produktknapperne i grænsefladen. Disse objekter sikrer at man kan skifte produktside og ved tryk på en knap kan et produkt tilføjes til shoppinglist som er indkøbskurven på \gls{KA}tet. For at opsætte denne pakke blev der først opsat et sekvensdiagram set på figur.
+På figur \ref{fig:ButtonModel} ser man ViewModel pakken buttonmodel, der står for produktknapperne i grænsefladen. Disse objekter sikrer at man kan skifte produktside og ved tryk på en knap kan et produkt tilføjes til shoppinglist som er indkøbskurven på \gls{KA}tet. For at opsætte denne pakke blev der først opsat et sekvensdiagram set på figur ??.
 
 \begin{figure}[H]
 	\centering
@@ -29,10 +29,10 @@ På figur \ref{fig:ButtonModel} ser man ViewModel pakken buttonmodel, der står 
 	\label{fig:CategoryControl}
 \end{figure}
 
-CategoryControl er en ViewModel pakke der står for at kontrollere produktkategori valg og dermed hvilke produkter der vises i grænsefladen. Denne ViewModel pakke kender til ProductButtonControl, da den derved kan oprette de ønskede produktknapper ved tryk på en kategori. Viden om eksisterende kategorier får pakken ved ProductCategoryList. \\
+CategoryControl er en ViewModel der står for at kontrollere produktkategori valg og dermed hvilke produkter der vises i grænsefladen. Denne ViewModel kender til ProductButtonControl, da den derved kan oprette de ønskede produktknapper ved tryk på en kategori. Viden om eksisterende kategorier får pakken ved ProductCategoryList. \\
 
 \textbf{Sekvensdiagrammer} \\
-For at forstå kommunikationen mellem de forskellige klasser/ pakker er de følgende sekvensdiagrammer blevet opsat. \\
+For at forstå kommunikationen mellem de forskellige klasser/pakker er de følgende sekvensdiagrammer blevet opsat. \\
 
 \begin{figure}[H]
 	\centering
@@ -42,7 +42,7 @@ For at forstå kommunikationen mellem de forskellige klasser/ pakker er de følg
 \end{figure}
 
 På figur \ref{fig:SekvensUC1} er der opsat et sekvensdiagram over Use Case 1 - Gennemfør køb. Her kan man se hvad der sker når en ekspedient starter et salg ved at vælge et produkt i grænsefladen. Når knappen bliver trykket ned, så kalder viewet AddItemCommand i ViewModellen ButtonContent. Dette command tjekker så om der allerede er tilføjet et produkt i shoppinglist. Hvis der er, inkrementeres produktet. Hvis ikke så tilføjes det. Herefter notifier shoppinglist på at der er ændret på totalprice og den nye værdi hentes derefter af viewet. \\
-Nu da produktet er tilføjet til shoppinglist kan ekspedienten tage imod penge fra kunden, trykke beløbet ind og så til sidst trykke på kontant. Herefter bliver der kaldt EndPurchase over i shoppinglist. Resten af sekvensen er vist ved sekvensdiagrammet på figur \ref{fig:SekvensRegisterSale}. Dette diagram er lagt for sig selv for at gøre det ovenstående sekvensdiagram mere overskueligt, men også fordi at ved at dele UC1 op i 2 sekvensdiagrammer, så kunne det første sekvensdiagram vise indtastning af produkter og det næste vise registrering af salg.
+Nu da produktet er tilføjet til shoppinglist kan ekspedienten tage imod penge fra kunden, trykke beløbet ind og så til sidst trykke på kontant. Herefter bliver der kaldt EndPurchase over i shoppinglist. Resten af sekvensen er vist ved sekvensdiagrammet på figur \ref{fig:SekvensRegisterSale}. Dette diagram er lagt for sig selv for at gøre det ovenstående sekvensdiagram mere overskueligt. Det første sekvensdiagram viser indtastning af produkter og det næste viser registrering af salg.
 
 \begin{figure}[H]
 	\centering
@@ -51,7 +51,7 @@ Nu da produktet er tilføjet til shoppinglist kan ekspedienten tage imod penge f
 	\label{fig:SekvensRegisterSale}
 \end{figure}
 
-Sekvensdiagrammet på figur \ref{fig:SekvensRegisterSale} viser registrering af salg ved færdigt salg. Først kaldes ShoppingList med EndPurchase. Denne kaldes så DbControl med en reference til sig selv. Dette betyder at DbControl får adgang til alle de produkter som er tilføjet. Herefter kalder opretter DbControl connect for at forbinde til \gls{CS}. H	erefter sender DbControl en \textit{RegisterPurchaseCommand} som fortæller CentralServer at der er gennemført en handel, og samtidig hvilke produkter der er solgt. Dette betyder at CentralServer kan producere en rekvisitionskvittering. Til sidst så disconnecter DbControl forbindelsen til centralserver ved et kald til Disconnect i Connection og kalder derefter PrintPurchase i FilePrinter som derved producerer en salgskvittering.
+Sekvensdiagrammet på figur \ref{fig:SekvensRegisterSale} viser registrering af salg ved færdigt salg. Først kaldes ShoppingList med EndPurchase. Denne kaldes så DbControl med en reference til sig selv. Dette betyder at DbControl får adgang til alle de produkter som er tilføjet. Herefter kalder DbControl \textit{connect} for at forbinde til \gls{CS}. Herefter sender DbControl en \textit{RegisterPurchaseCommand} som fortæller CentralServer at der er gennemført en handel, og samtidig hvilke produkter der er solgt. Dette betyder at \gls{CS} kan producere en rekvisitionskvittering. Til sidst disconnecter DbControl forbindelsen til \gls{CS} ved et kald til \textit{disconnect} i Connection og kalder derefter PrintPurchase i FilePrinter som derved producerer en salgskvittering.
 
 \begin{figure}[H]
 	\centering
@@ -60,7 +60,7 @@ Sekvensdiagrammet på figur \ref{fig:SekvensRegisterSale} viser registrering af 
 	\label{fig:SekvensOpstart}
 \end{figure}
 
-Sekvensdiagrammet på figur \ref{fig:SekvensOpstart} viser hvad der sker når programmet påbegyndes i henhold oprettelse af produktknapper samt kategori knappen. Først oprettes CategoriesMenu som i sin konstruktor kalder metoden Update. Denne metode kalder så update på ProductCategoryList\footnote{Se figur \ref{fig:SekvensUpdatePCL} samt tilhørende forklaring}. Dernæst oprettes listen totalList, som indeholder alle produkter uanset kategori. Denne liste bliver brugt ved oprettelsen af den første MenuCategory hvilket gør så den første kategori er en kategori med alle produkter. \\
+Sekvensdiagrammet på figur \ref{fig:SekvensOpstart} viser hvad der sker når programmet påbegyndes i forhold til oprettelse af produktknapper samt kategori knappen. Først oprettes CategoriesMenu som i sin konstruktor kalder metoden Update. Denne metode kalder så update på ProductCategoryList\footnote{Se figur \ref{fig:SekvensUpdatePCL} samt tilhørende forklaring}. Dernæst oprettes listen totalList, som indeholder alle produkter uanset kategori. Denne liste bliver brugt ved oprettelsen af den første MenuCategory hvilket gør så den første kategori er en kategori med alle produkter. \\
 For at sikre at der er produkter vist i produktknapperne ved opstart kaldes MenuCategoriens command Execute, der opdaterer ProductButtonControl med dens tilknyttede produktliste, her totalList \footnote{Se figur \ref{fig:SekvensUpdatePBC} samt tilhørende forklaring}. Nu tilføjes MenuCategorien til ContextMenuen, som er en menu der er tilknyttet en menuknappen i grænsefladen. Derefter oprettes der en MenuCategory for hver eksisterende kategori, og hver af disse tilføjes i ContextMenuen.
 
 \begin{figure}[H]
