--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/DesignOgStruktur/DesignOgStruktur.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/DesignOgStruktur/DesignOgStruktur.tex
@@ -1,5 +1,5 @@
 \subsection{Design og struktur}
-Kasseapparatet er designet med MVVM~\cite{MVVM}, og dertil også med stor fokus på adskilelse af Forretningslag og Præsentationslaget. Dette er sikret ved brug af viewmodels der står for at styre logikken i grænsefladen samt kommunikere ned i de nedre lag. Disse bliver forklaret nærmere længere nede i kapitel ?.
+\gls{KS} er designet med MVVM~\cite{MVVM}, og dertil også med stor fokus på adskillelse af Business Logic- og Præsentationslaget. Dette er sikret ved brug af viewmodels der står for at styre logikken i grænsefladen samt kommunikere ned i de nedre lag. Disse bliver forklaret nærmere længere nede, i kapital ??.
 Systemet er herunder beskrevet ved følgende pakkediagram for at give et hurtigt overblik.	
 
 \begin{figure}[H]
@@ -9,14 +9,14 @@ Systemet er herunder beskrevet ved følgende pakkediagram for at give et hurtigt
 	\label{fig:EndeligeGUI}
 \end{figure}
 
-Som man kan se på det ovenstående pakkediagram består kasseapparatet primært af grænsefladen og et data access lag. Dette er fordi at kasse apparatet ikke har som ansvar at kunne oprette/ redigere og slette produkter, men bare at afspejle produkterne i databasen. 
+Som man kan se på det ovenstående pakkediagram består \gls{KS} primært af grænsefladen og et data access lag. Dette er fordi \gls{KS} ikke har som ansvar at kunne oprette/ redigere og slette produkter, men bare at afspejle produkterne i databasen. 
 
 \begin{itemize}
 	\item \textbf{View} Views indeholder vores præsentationslagslogik. Det er skrevet i XML og er direkte med til at style vores grænseflade.
-	\item \textbf{ViewModel} Er en mediator mellem modellaget og grænsefladen. Viewmodels sikrer at kasseapparatets grænseflade afspejler ændringer der sker nede i systemet, samt kommunikerer grænsefladens ændringer til de lavere lag. Indholdet af denne bliver beskrevet nærmere i afsnit ? om præsentationslaget.
+	\item \textbf{ViewModel} Er en mediator mellem modellaget og grænsefladen. Viewmodels sikrer at \gls{KS} grænsefladen afspejler ændringer der sker i systemet, samt kommunikerer grænsefladens ændringer til de lavere lag. Indholdet af denne bliver beskrevet nærmere i afsnit ?? om præsentationslaget.
 	\item \textbf{Dependencies} Indeholder sourcekode der gør det nemmere at arbejde med commands.
-	\item \textbf{Model} Indeholder business logic. Dette er der ikke særligt meget af, da de fleste models findes i SharedLib
-	\item \textbf{DAL} Indeholder logik til at kommunikere med CentralServeren og derved Databasen. Dette lag vil blive beskrevet nærmere i afsnittet ? om Data Access Laget.
+	\item \textbf{Model} Indeholder business logic. Dette er der ikke særligt meget af, da de fleste models findes i \gls{SL}
+	\item \textbf{DAL} Indeholder logik til at kommunikere med \gls{CS} og derved \gls{DB}. Dette lag vil blive beskrevet nærmere i afsnittet ?? om Data Access Laget.
 \end{itemize}
 
 
