--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/Styling.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/Styling.tex
@@ -1,7 +1,7 @@
 \textbf{ButtonStyle.xaml}
 
-Da \gls{KA} \gls{GUI} indeholder mange knapper, er der lavet en stylings xaml fil for knapper, for at give \gls{KA} et mere karakteristisk udseende. Denne styling er også med til at dele de 3 segmenter i GUI'en mere op, og gøre det nemmer at benytte den hurtigere. \\
-Styling filen består af RadialGradientBrushs, som giver knapperne et mere fysisk udseende. Stylingens filen er også tiltænkt at skulle give knapperne en afrundet border.
+Da \gls{KA} \gls{GUI} indeholder mange knapper, er der lavet en styling XAML fil for knapper, for at give \gls{KA} et mere karakteristisk udseende. Denne styling er også med til at dele de 3 segmenter i GUI'en mere op, og gøre det nemmere at benytte \gls{KS} intuitivt. \\
+Styling filen består af RadialGradientBrushs, som giver knapperne et mere fysisk udseende. Styling filen er også tiltænkt at skulle give knapperne afrundede kanter.
 
 \begin{figure}[H]
 	\centering
