--- a/LaTeX/Projektrapport/Projektbeskrivelse/FremtidigtArbejde/Frontend.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/FremtidigtArbejde/Frontend.tex
@@ -1,14 +1,7 @@
 \subsubsection{Kasseapparat}
 
-\textbf{Generelt} 
-…
-
 \textbf{ShoppingList} \\
-Denne klasse er blevet lidt en monolit og kunne med fordel få sit ansvar delt i forskellige klasser, for at overholde SOLID principperne.\\ 
-
-
-\textbf{ProductCategoryList} \\
-... \\
+Denne klasse er begyndt at blive til en monolit og kunne med fordel få sit ansvar delt i forskellige klasser, for at overholde SOLID principperne.\\ 
 
 \textbf{Connection \& DBcontrol} \\
 Disse klasser burde køre i deres egentråd, evt med en kø til ting der ønskes sendt til CentralServer. \\
