--- a/LaTeX/Projektrapport/Projektbeskrivelse/Erfaringer/Kasper.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/Erfaringer/Kasper.tex
@@ -1,1 +1,9 @@
 \subsubsection{Kasper Klausen}
+
+Da dette projekt har været det første rene software projekt, har der kunne udvikles et større system end tidligere, dette har givet mig endnu bedre erfaringer samt træning inden for software udvikling, både på udvikling og dokumentation.
+
+Projektet har budt på mere iterativ udvikling end tidligere projektet, hvilket har givet et langt bedre indblik i denne arbejdsform, og det er tydeligt hvordan dette har været med til at skubbe projektet i den rigtige retning. Blandet andet overgangen til at benytte produktkategorier, da disse skulle inkorporeres, gik betydeligt lettere end det ville have gået med f.eks. vandfaldsmodellen.
+
+Som ekstra del i projektet har jeg stået for opsætning af dokumenter i LaTeX, hvilket har givet gode kompetence med dette værktøj. Jeg har fået erfaringer i opsætning af preambler og forside, opsætning af glossary, samt opsætning af bibtex til referencer.
+
+At have siddet på udviklingen af kasseapparater har givet mig gode muligheder for at kunne inkludere og kombinere alle semestrets fag, med undtagelse af database. Jeg har brugt; GUI til at opsætte en grafisk brugerflade. Software Design til at udvikle et solidt, testbart og vedligeholdelses venligt system. Software test til at teste systemet. Samt Kommunikationsnetværker til at kunne kommunikere med den centrale server. Dette har givet en bedre forståelse af semestrets fag, da de er blevet brugt i en større sammenhæng, samt blevet kombineret for at kunne løse projektets udfordringer. 
