--- a/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/SharedLib/Design.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/SharedLib/Design.tex
@@ -1,4 +1,4 @@
-\subsection{Design}
+\subsubsection{Design}
 Da SharedLib blev udarbejdet var der stort fokus på SOLID's designprincipper da disse muliggjorde den ønskede funktionalitet, hvis disse blev overholdt. Dette betød at protokollen specielt blev bygget op omkring tre hovedbegreber:
 
 \begin{itemize}
