--- a/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/Frontend.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/Frontend.tex
@@ -2,7 +2,7 @@
 
 Kasseapparatet blev opbygget ved en tre lags struktur: Presentation-, Business logic- og Data Access Layer. Disse lag vil blive beskrevet i nedenstående afsnit.
 
-\subsection{Designovervejelser}
+\subsubsection{Designovervejelser}
 Designet af Kasseapparatet blev startet ud med at der blev tegnet en skitse for hvordan selve brugergrænsefladen skulle ende med at se ud.
 Det var vigtigt at der en klar opdeling af de forskellige lag. Dette betød at der mellem præsentations- og business logic laget blev benyttet MVVM. MVVM er et pattern, der sikrer at kommunikationen mellem grænsefladen og underliggende Viewmodels er håndteret ordentligt. \\
 Det første der blev implementeret til Kasseapparatet var selve grænsefladen. Grænsefladen blev opstillet med knapper uden nogen funktionalitet. Herefter begyndte funktionaliteten at blive implementeret. Funktionaliteten startede ud som en klasse der kunne indholde de tilgængelige produkter, samt en fake af database connectionen, som kunne fylde denne liste med dummie produkter, hvilket lettede videre udvikling da der allerede kunne testes med produkter. Herefter kunne arbejdet deles i repræsentation af produkter i gui'en, og håndtering af indkøbskurven samt egentlige forbindelse til CentralServer
