--- a/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/SharedLib/Funktionalitet.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/SharedLib/Funktionalitet.tex
@@ -1,4 +1,4 @@
-\subsection{Funktionalitet}
+\subsubsection{Funktionalitet}
 SharedLib's primære funktion i dette projekt har været at håndtere kommunikationsprotokollen. hovedformålet med at ligge denne i et fælles bibliotek var at gøre kommunikationen imellem systemerne mere overskuelig, ved at der kun skal tages stilling til højniveau objekter.
 
 Da systemets kommunikation foregår over TCP/IP forbindelser og med brugen af XML er det protokollen reelt gør enten at omdanne et givent kommando objekt til en string af XML så denne kan sendes, eller også tager den en string af XML der er modtaget og genskaber et kommando objekt ud fra de indeholdende data.
