Tekst til implementering af bll

--- a/LaTeX/Projektrapport/RapportBib.bib
+++ b/LaTeX/Projektrapport/RapportBib.bib
@@ -61,3 +61,15 @@
   		howpublished = {\url{https://technet.microsoft.com/en-us/library/cc958821.aspx}},
   		note = {Tilgået: 08/12-2015}
 }
+
+@misc{	ObsCol,
+		title = {ObservableCollection<T> Class},
+  		howpublished = {\url{https://msdn.microsoft.com/en-us/library/ms668604(v=vs.110).aspx}},
+  		note = {Tilgået: 09/12-2015}
+}
+
+@misc{	RelayC,
+		title = {Relay Command},
+  		howpublished = {\url{https://msdn.microsoft.com/en-us/library/microsoft.teamfoundation.mvvm.relaycommand(v=vs.110).aspx}},
+  		note = {Tilgået: 09/12-2015}
+}
