--- a/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/Frontend/BusinessLogic.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/Frontend/BusinessLogic.tex
@@ -1,1 +1,8 @@
-\subsubsection{Busines Logic Layer}
+\subsubsection{Business Logic Layer}
+Kasseapparatets Business Logic Layer, består af 2 overordnede dele. ProductCategoryLsit og ShoppingList. \\
+
+ProductCategoryList er implementeret med henblik på at indeholde produkt kategorier, hentet fra den central server, og dermed produkterne. \\
+
+ShoppingList er implementeret som en ViewModel fra MVVM. Modelen til ShoppingList er PurchaseProduct som findes i SharedLib. Viewet som præsentere ShoppingList er MainWindow. \\
+ShoppingList indkorporer ObservableCollection~\cite{ObsCol}, hvilket medføre at ShoppingList kan håndteres som en liste af PurchaseProducts. ShoppingList har desuden en række commands\footnote{RelayCommands~\cite{RelayC}}, som bindes til midter segmentets knapper samt annuller knappen i det højre segment.
+Til ShoppingList anvendes der også view code som kalder funktioner  i ShoppingList med information fra displayet.
