--- a/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/Frontend.tex
+++ b/LaTeX/Projektrapport/Projektbeskrivelse/DesignOgImplementering/Frontend.tex
@@ -1,6 +1,6 @@
 \subsection{Kasseapparat}
 
-Kasseapparatet blev opbygget ved en tre lags struktur: Presentation-, Business logic- og Data Access Layer. Disse lag vil blive beskrevet i nedenstående afsnit.
+Kasseapparatet blev opbygget med tre lags strukturen: Presentation-, Business logic- og Data Access Layer. Disse lag vil blive beskrevet i nedenstående afsnit.
 
 \subsubsection{Designovervejelser}
 Designet af Kasseapparatet blev startet ud med at der blev tegnet en skitse for hvordan selve brugergrænsefladen skulle ende med at se ud.
